# ine-challenge

./: .env.dev  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
api/: .coverage  .pylintrc  Dockerfile  manage.py  pyproject.toml
api/api/: asgi.py  settings.py  urls.py
api/users/: apps.py  models.py  permissions.py  serializers.py  subscription.py  urls.py  views.py
api/users/migrations/: 0001_initial.py  0002_user_created_user_updated.py
api/users/tests/: dependencies.py  test_subscription.py  test_users.py
